# voicechat

./: .gitignore  Makefile  deploy.sh  docker-compose.prod.yml  docker-compose.yml  livekit.yaml
.github/workflows/: build.yml
_legacy_cpp/: CMakeLists.txt  audio_processor.h  main.cpp  udp_client.h
client/: index.html  mediasoup-client.bundle.js  mediasoup-client.esm.js  mediasoup-client.iife.js
client-desktop/: package-lock.json  package.json
client-desktop/src-tauri/: Cargo.toml  tauri.conf.json
client-desktop/src-tauri/src/: lib.rs  main.rs
mediasoup-server/: Dockerfile  package-lock.json  package.json
mediasoup-server/src/: config.js  room.js  server.js
server/: Dockerfile  go.mod  go.sum  main.go
server/config/: config.go
server/handler/: auth.go  livekit.go  mediasoup.go  ms_proxy.go  room.go
server/middleware/: cors.go  jwt.go
server/model/: room.go  user.go
server/store/: db.go  room.go  user.go
server/ws/: signaling.go
